--- a/READ.org
+++ b/READ.org
@@ -11,6 +11,7 @@
   + [[https://pavpanchekha.com/etc/main.css][pavpanchekha's blog style]] - 链接指向 [[https://pavpanchekha.com/][pavpanchekha]] 的博客所使用的样式文件 [[[https://creativecommons.org/licenses/by-sa/4.0/][CC-BY-SA licensed]]]
   + [[https://ogbe.net/res/main.css][ogbe' blog style]] - 链接指向 [[https://ogbe.net][ogbe]] 的博客所使用的样式文件(代码样式[[https://ogbe.net/res/code.css][code.css]]) [[[https://creativecommons.org/licenses/by-sa/4.0/][CC BY-SA 4.0]]]
   + [[https://github.com/guidao/guidao.github.io/blob/master/css/org-css.css][guidao's blog style]] - 链接指向 [[https://guidao.github.io/index.html][guidao]] 的博客所使用的样式文件
+  + [[https://nicolas.petton.fr/css/site.css?v=2][Nicolas Petton' blog style]] 链接指向 [[https://nicolas.petton.fr/][Nicolas Petton]] 的博客所使用的样式文件
   + [[https://orgmode.org/org.css][org-mode]] - 链接指向 [[https://orgmode.org/][org-mode]] 官网的样式文件 [[[https://www.gnu.org/licenses/fdl-1.3.html][GFDL 1.3]]]
 
 * 相关
