添加几个主题, 更新样例文件

--- a/org-html-themes/example-bigblow.org
+++ b/org-html-themes/example-bigblow.org
@@ -1,4 +1,4 @@
-#+SETUPFILE:  theme.setup
+#+SETUPFILE:  setup/theme-bigblow.setup
 #+OPTIONS:    H:3 num:nil toc:t \n:nil ::t |:t ^:t -:t f:t *:t tex:t d:(HIDE) tags:not-in-toc
 #+STARTUP:    align fold nodlcheck hidestars oddeven lognotestate
 #+SEQ_TODO:   TODO(t) INPROGRESS(i) WAITING(w@) | DONE(d) CANCELED(c@)
@@ -130,11 +130,11 @@
 
    The most important settings here are:
 
-   | =base-directory=       | The components root directory.                                                                                                |
-   | =base-extension=       | Filename suffix without the dot.                                                                                              |
-   | =publishing-directory= | The base directory where all our files will be published.                                                                     |
+   | =base-directory=       | The components root directory.                                                                                            |
+   | =base-extension=       | Filename suffix without the dot.                                                                                          |
+   | =publishing-directory= | The base directory where all our files will be published.                                                                 |
    | =recursive=            | If =t=, include subdirectories - we want that. Subdirectories in =:publishing-directory= are created if they don't yet exist. |
-   | =publishing-function=  | If and how org should process the files in this component. In this case: convert the Org-mode files to HTML.                  |
+   | =publishing-function=  | If and how org should process the files in this component. In this case: convert the Org-mode files to HTML.              |
 
 ** The /static/ component
 
@@ -504,293 +504,293 @@
   the bottom of that page).
 
 
-  | Symbol      | LaTeX                    |
-  |-------------+--------------------------|
-  | \nbsp       | ~\nbsp~                  |
-  | \iexcl      | ~\iexcl~                 |
-  | \cent       | ~\cent~                  |
-  | \pound      | ~\pound~                 |
-  | \curren     | ~\curren~                |
-  | \yen        | ~\yen~                   |
-  | \brvbar     | ~\brvbar~                |
-  | \vert       | ~\vert~                  |
-  | \sect       | ~\sect~                  |
-  | \uml        | ~\uml~                   |
-  | \copy       | ~\copy~                  |
-  | \ordf       | ~\ordf~                  |
-  | \laquo      | ~\laquo~                 |
-  | \not        | ~\not~                   |
-  | \shy        | ~\shy~                   |
-  | \reg        | ~\reg~                   |
-  | \macr       | ~\macr~                  |
-  | \deg        | ~\deg~                   |
-  | \plusmn     | ~\plusmn~                |
-  | \sup1       | ~\sup1~                  |
-  | \sup2       | ~\sup2~                  |
-  | \sup3       | ~\sup3~                  |
-  | \acute      | ~\acute~                 |
-  | \micro      | ~\micro~                 |
-  | \para       | ~\para~                  |
-  | \middot     | ~\middot~                |
-  | \odot       | ~\odot~                  |
-  | \star       | ~\star~                  |
-  | \cedil      | ~\cedil~                 |
-  | \ordm       | ~\ordm~                  |
-  | \raquo      | ~\raquo~                 |
-  | \frac14     | ~\frac14~                |
-  | \frac12     | ~\frac12~                |
-  | \frac34     | ~\frac34~                |
-  | \iquest     | ~\iquest~                |
-  | \Agrave     | ~\Agrave~                |
-  | \Aacute     | ~\Aacute~                |
-  | \Acirc      | ~\Acirc~                 |
-  | \Atilde     | ~\Atilde~                |
-  | \Auml       | ~\Auml~                  |
+  | Symbol      | LaTeX                |
+  |-------------+----------------------|
+  | \nbsp       | ~\nbsp~                |
+  | \iexcl      | ~\iexcl~               |
+  | \cent       | ~\cent~                |
+  | \pound      | ~\pound~               |
+  | \curren     | ~\curren~              |
+  | \yen        | ~\yen~                 |
+  | \brvbar     | ~\brvbar~              |
+  | \vert       | ~\vert~                |
+  | \sect       | ~\sect~                |
+  | \uml        | ~\uml~                 |
+  | \copy       | ~\copy~                |
+  | \ordf       | ~\ordf~                |
+  | \laquo      | ~\laquo~               |
+  | \not        | ~\not~                 |
+  | \shy        | ~\shy~                 |
+  | \reg        | ~\reg~                 |
+  | \macr       | ~\macr~                |
+  | \deg        | ~\deg~                 |
+  | \plusmn     | ~\plusmn~              |
+  | \sup1       | ~\sup1~                |
+  | \sup2       | ~\sup2~                |
+  | \sup3       | ~\sup3~                |
+  | \acute      | ~\acute~               |
+  | \micro      | ~\micro~               |
+  | \para       | ~\para~                |
+  | \middot     | ~\middot~              |
+  | \odot       | ~\odot~                |
+  | \star       | ~\star~                |
+  | \cedil      | ~\cedil~               |
+  | \ordm       | ~\ordm~                |
+  | \raquo      | ~\raquo~               |
+  | \frac14     | ~\frac14~              |
+  | \frac12     | ~\frac12~              |
+  | \frac34     | ~\frac34~              |
+  | \iquest     | ~\iquest~              |
+  | \Agrave     | ~\Agrave~              |
+  | \Aacute     | ~\Aacute~              |
+  | \Acirc      | ~\Acirc~               |
+  | \Atilde     | ~\Atilde~              |
+  | \Auml       | ~\Auml~                |
   | \Aring      | ~\Aring~ ~\AA~           |
-  | \AElig      | ~\AElig~                 |
-  | \Ccedil     | ~\Ccedil~                |
-  | \Egrave     | ~\Egrave~                |
-  | \Eacute     | ~\Eacute~                |
-  | \Ecirc      | ~\Ecirc~                 |
-  | \Euml       | ~\Euml~                  |
-  | \Igrave     | ~\Igrave~                |
-  | \Iacute     | ~\Iacute~                |
-  | \Icirc      | ~\Icirc~                 |
-  | \Iuml       | ~\Iuml~                  |
-  | \ETH        | ~\ETH~                   |
-  | \Ntilde     | ~\Ntilde~                |
-  | \Ograve     | ~\Ograve~                |
-  | \Oacute     | ~\Oacute~                |
-  | \Ocirc      | ~\Ocirc~                 |
-  | \Otilde     | ~\Otilde~                |
-  | \Ouml       | ~\Ouml~                  |
-  | \times      | ~\times~                 |
-  | \Oslash     | ~\Oslash~                |
-  | \Ugrave     | ~\Ugrave~                |
-  | \Uacute     | ~\Uacute~                |
-  | \Ucirc      | ~\Ucirc~                 |
-  | \Uuml       | ~\Uuml~                  |
-  | \Yacute     | ~\Yacute~                |
-  | \THORN      | ~\THORN~                 |
-  | \szlig      | ~\szlig~                 |
-  | \agrave     | ~\agrave~                |
-  | \aacute     | ~\aacute~                |
-  | \acirc      | ~\acirc~                 |
-  | \atilde     | ~\atilde~                |
-  | \auml       | ~\auml~                  |
-  | \aring      | ~\aring~                 |
-  | \aelig      | ~\aelig~                 |
-  | \ccedil     | ~\ccedil~                |
-  | \egrave     | ~\egrave~                |
-  | \eacute     | ~\eacute~                |
-  | \ecirc      | ~\ecirc~                 |
-  | \euml       | ~\euml~                  |
-  | \igrave     | ~\igrave~                |
-  | \iacute     | ~\iacute~                |
-  | \icirc      | ~\icirc~                 |
-  | \iuml       | ~\iuml~                  |
-  | \eth        | ~\eth~                   |
-  | \ntilde     | ~\ntilde~                |
-  | \ograve     | ~\ograve~                |
-  | \oacute     | ~\oacute~                |
-  | \ocirc      | ~\ocirc~                 |
-  | \otilde     | ~\otilde~                |
-  | \ouml       | ~\ouml~                  |
-  | \oslash     | ~\oslash~                |
-  | \ugrave     | ~\ugrave~                |
-  | \uacute     | ~\uacute~                |
-  | \ucirc      | ~\ucirc~                 |
-  | \uuml       | ~\uuml~                  |
-  | \yacute     | ~\yacute~                |
-  | \thorn      | ~\thorn~                 |
-  | \yuml       | ~\yuml~                  |
-  | \fnof       | ~\fnof~                  |
-  | \Alpha      | ~\Alpha~                 |
-  | \Beta       | ~\Beta~                  |
-  | \Gamma      | ~\Gamma~                 |
-  | \Delta      | ~\Delta~                 |
-  | \Epsilon    | ~\Epsilon~               |
-  | \Zeta       | ~\Zeta~                  |
-  | \Eta        | ~\Eta~                   |
-  | \Theta      | ~\Theta~                 |
-  | \Iota       | ~\Iota~                  |
-  | \Kappa      | ~\Kappa~                 |
-  | \Lambda     | ~\Lambda~                |
-  | \Mu         | ~\Mu~                    |
-  | \Nu         | ~\Nu~                    |
-  | \Xi         | ~\Xi~                    |
-  | \Omicron    | ~\Omicron~               |
-  | \Pi         | ~\Pi~                    |
-  | \Rho        | ~\Rho~                   |
-  | \Sigma      | ~\Sigma~                 |
-  | \Tau        | ~\Tau~                   |
-  | \Upsilon    | ~\Upsilon~               |
-  | \Phi        | ~\Phi~                   |
-  | \Chi        | ~\Chi~                   |
-  | \Psi        | ~\Psi~                   |
-  | \Omega      | ~\Omega~                 |
-  | \alpha      | ~\alpha~                 |
-  | \beta       | ~\beta~                  |
-  | \gamma      | ~\gamma~                 |
-  | \delta      | ~\delta~                 |
-  | \epsilon    | ~\epsilon~               |
-  | \varepsilon | ~\varepsilon~            |
-  | \zeta       | ~\zeta~                  |
-  | \eta        | ~\eta~                   |
-  | \theta      | ~\theta~                 |
-  | \iota       | ~\iota~                  |
-  | \kappa      | ~\kappa~                 |
-  | \lambda     | ~\lambda~                |
-  | \mu         | ~\mu~                    |
-  | \nu         | ~\nu~                    |
-  | \xi         | ~\xi~                    |
-  | \omicron    | ~\omicron~               |
-  | \pi         | ~\pi~                    |
-  | \rho        | ~\rho~                   |
+  | \AElig      | ~\AElig~               |
+  | \Ccedil     | ~\Ccedil~              |
+  | \Egrave     | ~\Egrave~              |
+  | \Eacute     | ~\Eacute~              |
+  | \Ecirc      | ~\Ecirc~               |
+  | \Euml       | ~\Euml~                |
+  | \Igrave     | ~\Igrave~              |
+  | \Iacute     | ~\Iacute~              |
+  | \Icirc      | ~\Icirc~               |
+  | \Iuml       | ~\Iuml~                |
+  | \ETH        | ~\ETH~                 |
+  | \Ntilde     | ~\Ntilde~              |
+  | \Ograve     | ~\Ograve~              |
+  | \Oacute     | ~\Oacute~              |
+  | \Ocirc      | ~\Ocirc~               |
+  | \Otilde     | ~\Otilde~              |
+  | \Ouml       | ~\Ouml~                |
+  | \times      | ~\times~               |
+  | \Oslash     | ~\Oslash~              |
+  | \Ugrave     | ~\Ugrave~              |
+  | \Uacute     | ~\Uacute~              |
+  | \Ucirc      | ~\Ucirc~               |
+  | \Uuml       | ~\Uuml~                |
+  | \Yacute     | ~\Yacute~              |
+  | \THORN      | ~\THORN~               |
+  | \szlig      | ~\szlig~               |
+  | \agrave     | ~\agrave~              |
+  | \aacute     | ~\aacute~              |
+  | \acirc      | ~\acirc~               |
+  | \atilde     | ~\atilde~              |
+  | \auml       | ~\auml~                |
+  | \aring      | ~\aring~               |
+  | \aelig      | ~\aelig~               |
+  | \ccedil     | ~\ccedil~              |
+  | \egrave     | ~\egrave~              |
+  | \eacute     | ~\eacute~              |
+  | \ecirc      | ~\ecirc~               |
+  | \euml       | ~\euml~                |
+  | \igrave     | ~\igrave~              |
+  | \iacute     | ~\iacute~              |
+  | \icirc      | ~\icirc~               |
+  | \iuml       | ~\iuml~                |
+  | \eth        | ~\eth~                 |
+  | \ntilde     | ~\ntilde~              |
+  | \ograve     | ~\ograve~              |
+  | \oacute     | ~\oacute~              |
+  | \ocirc      | ~\ocirc~               |
+  | \otilde     | ~\otilde~              |
+  | \ouml       | ~\ouml~                |
+  | \oslash     | ~\oslash~              |
+  | \ugrave     | ~\ugrave~              |
+  | \uacute     | ~\uacute~              |
+  | \ucirc      | ~\ucirc~               |
+  | \uuml       | ~\uuml~                |
+  | \yacute     | ~\yacute~              |
+  | \thorn      | ~\thorn~               |
+  | \yuml       | ~\yuml~                |
+  | \fnof       | ~\fnof~                |
+  | \Alpha      | ~\Alpha~               |
+  | \Beta       | ~\Beta~                |
+  | \Gamma      | ~\Gamma~               |
+  | \Delta      | ~\Delta~               |
+  | \Epsilon    | ~\Epsilon~             |
+  | \Zeta       | ~\Zeta~                |
+  | \Eta        | ~\Eta~                 |
+  | \Theta      | ~\Theta~               |
+  | \Iota       | ~\Iota~                |
+  | \Kappa      | ~\Kappa~               |
+  | \Lambda     | ~\Lambda~              |
+  | \Mu         | ~\Mu~                  |
+  | \Nu         | ~\Nu~                  |
+  | \Xi         | ~\Xi~                  |
+  | \Omicron    | ~\Omicron~             |
+  | \Pi         | ~\Pi~                  |
+  | \Rho        | ~\Rho~                 |
+  | \Sigma      | ~\Sigma~               |
+  | \Tau        | ~\Tau~                 |
+  | \Upsilon    | ~\Upsilon~             |
+  | \Phi        | ~\Phi~                 |
+  | \Chi        | ~\Chi~                 |
+  | \Psi        | ~\Psi~                 |
+  | \Omega      | ~\Omega~               |
+  | \alpha      | ~\alpha~               |
+  | \beta       | ~\beta~                |
+  | \gamma      | ~\gamma~               |
+  | \delta      | ~\delta~               |
+  | \epsilon    | ~\epsilon~             |
+  | \varepsilon | ~\varepsilon~          |
+  | \zeta       | ~\zeta~                |
+  | \eta        | ~\eta~                 |
+  | \theta      | ~\theta~               |
+  | \iota       | ~\iota~                |
+  | \kappa      | ~\kappa~               |
+  | \lambda     | ~\lambda~              |
+  | \mu         | ~\mu~                  |
+  | \nu         | ~\nu~                  |
+  | \xi         | ~\xi~                  |
+  | \omicron    | ~\omicron~             |
+  | \pi         | ~\pi~                  |
+  | \rho        | ~\rho~                 |
   | \sigmaf     | ~\sigmaf~  ~\varsigma~   |
-  | \sigma      | ~\sigma~                 |
-  | \tau        | ~\tau~                   |
-  | \upsilon    | ~\upsilon~               |
-  | \phi        | ~\phi~                   |
-  | \chi        | ~\chi~                   |
-  | \psi        | ~\psi~                   |
-  | \omega      | ~\omega~                 |
+  | \sigma      | ~\sigma~               |
+  | \tau        | ~\tau~                 |
+  | \upsilon    | ~\upsilon~             |
+  | \phi        | ~\phi~                 |
+  | \chi        | ~\chi~                 |
+  | \psi        | ~\psi~                 |
+  | \omega      | ~\omega~               |
   | \thetasym   | ~\thetasym~  ~\vartheta~ |
-  | \upsih      | ~\upsih~                 |
-  | \piv        | ~\piv~                   |
+  | \upsih      | ~\upsih~               |
+  | \piv        | ~\piv~                 |
   | \bull       | ~\bull~  ~\bullet~       |
   | \hellip     | ~\hellip~  ~\dots~       |
-  | \prime      | ~\prime~                 |
-  | \Prime      | ~\Prime~                 |
-  | \oline      | ~\oline~                 |
-  | \frasl      | ~\frasl~                 |
-  | \weierp     | ~\weierp~                |
-  | \image      | ~\image~                 |
-  | \real       | ~\real~                  |
-  | \trade      | ~\trade~                 |
-  | \alefsym    | ~\alefsym~               |
-  | \larr       | ~\larr~                  |
-  | \uarr       | ~\uarr~                  |
-  | \rarr       | ~\rarr~                  |
-  | \darr       | ~\darr~                  |
-  | \harr       | ~\harr~                  |
-  | \crarr      | ~\crarr~                 |
-  | \lArr       | ~\lArr~                  |
-  | \uArr       | ~\uArr~                  |
-  | \rArr       | ~\rArr~                  |
-  | \dArr       | ~\dArr~                  |
-  | \hArr       | ~\hArr~                  |
-  | \forall     | ~\forall~                |
-  | \part       | ~\part~                  |
-  | \exist      | ~\exist~                 |
-  | \empty      | ~\empty~                 |
-  | \nabla      | ~\nabla~                 |
-  | \isin       | ~\isin~                  |
-  | \notin      | ~\notin~                 |
-  | \ni         | ~\ni~                    |
-  | \prod       | ~\prod~                  |
-  | \sum        | ~\sum~                   |
-  | \minus      | ~\minus~                 |
-  | \lowast     | ~\lowast~                |
-  | \radic      | ~\radic~                 |
-  | \prop       | ~\prop~                  |
-  | \infin      | ~\infin~                 |
-  | \ang        | ~\ang~                   |
-  | \cap        | ~\cap~                   |
-  | \cup        | ~\cup~                   |
-  | \int        | ~\int~                   |
-  | \there4     | ~\there4~                |
-  | \sim        | ~\sim~                   |
-  | \cong       | ~\cong~                  |
-  | \asymp      | ~\asymp~                 |
-  | \ne         | ~\ne~                    |
-  | \equiv      | ~\equiv~                 |
-  | \le         | ~\le~                    |
-  | \ge         | ~\ge~                    |
-  | \sub        | ~\sub~                   |
-  | \sup        | ~\sup~                   |
-  | \nsub       | ~\nsub~                  |
-  | \sube       | ~\sube~                  |
-  | \supe       | ~\supe~                  |
-  | \oplus      | ~\oplus~                 |
-  | \otimes     | ~\otimes~                |
-  | \perp       | ~\perp~                  |
-  | \sdot       | ~\sdot~                  |
-  | \lceil      | ~\lceil~                 |
-  | \rceil      | ~\rceil~                 |
-  | \lfloor     | ~\lfloor~                |
-  | \rfloor     | ~\rfloor~                |
-  | \lang       | ~\lang~                  |
-  | \rang       | ~\rang~                  |
-  | \loz        | ~\loz~                   |
-  | \spades     | ~\spades~                |
-  | \clubs      | ~\clubs~                 |
-  | \hearts     | ~\hearts~                |
-  | \diams      | ~\diams~                 |
-  | \smile      | ~\smile~                 |
-  | \quot       | ~\quot~                  |
-  | \amp        | ~\amp~                   |
-  | \lt         | ~\lt~                    |
-  | \gt         | ~\gt~                    |
-  | \OElig      | ~\OElig~                 |
-  | \oelig      | ~\oelig~                 |
-  | \Scaron     | ~\Scaron~                |
-  | \scaron     | ~\scaron~                |
-  | \Yuml       | ~\Yuml~                  |
-  | \circ       | ~\circ~                  |
-  | \tilde      | ~\tilde~                 |
-  | \ensp       | ~\ensp~                  |
-  | \emsp       | ~\emsp~                  |
-  | \thinsp     | ~\thinsp~                |
-  | \zwnj       | ~\zwnj~                  |
-  | \zwj        | ~\zwj~                   |
-  | \lrm        | ~\lrm~                   |
-  | \rlm        | ~\rlm~                   |
-  | \ndash      | ~\ndash~                 |
-  | \mdash      | ~\mdash~                 |
-  | \lsquo      | ~\lsquo~                 |
-  | \rsquo      | ~\rsquo~                 |
-  | \sbquo      | ~\sbquo~                 |
-  | \ldquo      | ~\ldquo~                 |
-  | \rdquo      | ~\rdquo~                 |
-  | \bdquo      | ~\bdquo~                 |
-  | \dagger     | ~\dagger~                |
-  | \Dagger     | ~\Dagger~                |
-  | \permil     | ~\permil~                |
-  | \lsaquo     | ~\lsaquo~                |
-  | \rsaquo     | ~\rsaquo~                |
-  | \euro       | ~\euro~                  |
-  | \arccos     | ~\arccos~                |
-  | \arcsin     | ~\arcsin~                |
-  | \arctan     | ~\arctan~                |
-  | \arg        | ~\arg~                   |
-  | \cos        | ~\cos~                   |
-  | \cosh       | ~\cosh~                  |
-  | \cot        | ~\cot~                   |
-  | \coth       | ~\coth~                  |
-  | \csc        | ~\csc~                   |
-  | \deg        | ~\deg~                   |
-  | \det        | ~\det~                   |
-  | \dim        | ~\dim~                   |
-  | \exp        | ~\exp~                   |
-  | \gcd        | ~\gcd~                   |
-  | \hom        | ~\hom~                   |
-  | \inf        | ~\inf~                   |
-  | \ker        | ~\ker~                   |
-  | \lg         | ~\lg~                    |
-  | \lim        | ~\lim~                   |
-  | \liminf     | ~\liminf~                |
-  | \limsup     | ~\limsup~                |
-  | \ln         | ~\ln~                    |
-  | \log        | ~\log~                   |
-  | \max        | ~\max~                   |
-  | \min        | ~\min~                   |
-  | \Pr         | ~\Pr~                    |
-  | \sec        | ~\sec~                   |
-  | \sin        | ~\sin~                   |
-  | \sinh       | ~\sinh~                  |
-  | \tan        | ~\tan~                   |
-  | \tanh       | ~\tanh~                  |
+  | \prime      | ~\prime~               |
+  | \Prime      | ~\Prime~               |
+  | \oline      | ~\oline~               |
+  | \frasl      | ~\frasl~               |
+  | \weierp     | ~\weierp~              |
+  | \image      | ~\image~               |
+  | \real       | ~\real~                |
+  | \trade      | ~\trade~               |
+  | \alefsym    | ~\alefsym~             |
+  | \larr       | ~\larr~                |
+  | \uarr       | ~\uarr~                |
+  | \rarr       | ~\rarr~                |
+  | \darr       | ~\darr~                |
+  | \harr       | ~\harr~                |
+  | \crarr      | ~\crarr~               |
+  | \lArr       | ~\lArr~                |
+  | \uArr       | ~\uArr~                |
+  | \rArr       | ~\rArr~                |
+  | \dArr       | ~\dArr~                |
+  | \hArr       | ~\hArr~                |
+  | \forall     | ~\forall~              |
+  | \part       | ~\part~                |
+  | \exist      | ~\exist~               |
+  | \empty      | ~\empty~               |
+  | \nabla      | ~\nabla~               |
+  | \isin       | ~\isin~                |
+  | \notin      | ~\notin~               |
+  | \ni         | ~\ni~                  |
+  | \prod       | ~\prod~                |
+  | \sum        | ~\sum~                 |
+  | \minus      | ~\minus~               |
+  | \lowast     | ~\lowast~              |
+  | \radic      | ~\radic~               |
+  | \prop       | ~\prop~                |
+  | \infin      | ~\infin~               |
+  | \ang        | ~\ang~                 |
+  | \cap        | ~\cap~                 |
+  | \cup        | ~\cup~                 |
+  | \int        | ~\int~                 |
+  | \there4     | ~\there4~              |
+  | \sim        | ~\sim~                 |
+  | \cong       | ~\cong~                |
+  | \asymp      | ~\asymp~               |
+  | \ne         | ~\ne~                  |
+  | \equiv      | ~\equiv~               |
+  | \le         | ~\le~                  |
+  | \ge         | ~\ge~                  |
+  | \sub        | ~\sub~                 |
+  | \sup        | ~\sup~                 |
+  | \nsub       | ~\nsub~                |
+  | \sube       | ~\sube~                |
+  | \supe       | ~\supe~                |
+  | \oplus      | ~\oplus~               |
+  | \otimes     | ~\otimes~              |
+  | \perp       | ~\perp~                |
+  | \sdot       | ~\sdot~                |
+  | \lceil      | ~\lceil~               |
+  | \rceil      | ~\rceil~               |
+  | \lfloor     | ~\lfloor~              |
+  | \rfloor     | ~\rfloor~              |
+  | \lang       | ~\lang~                |
+  | \rang       | ~\rang~                |
+  | \loz        | ~\loz~                 |
+  | \spades     | ~\spades~              |
+  | \clubs      | ~\clubs~               |
+  | \hearts     | ~\hearts~              |
+  | \diams      | ~\diams~               |
+  | \smile      | ~\smile~               |
+  | \quot       | ~\quot~                |
+  | \amp        | ~\amp~                 |
+  | \lt         | ~\lt~                  |
+  | \gt         | ~\gt~                  |
+  | \OElig      | ~\OElig~               |
+  | \oelig      | ~\oelig~               |
+  | \Scaron     | ~\Scaron~              |
+  | \scaron     | ~\scaron~              |
+  | \Yuml       | ~\Yuml~                |
+  | \circ       | ~\circ~                |
+  | \tilde      | ~\tilde~               |
+  | \ensp       | ~\ensp~                |
+  | \emsp       | ~\emsp~                |
+  | \thinsp     | ~\thinsp~              |
+  | \zwnj       | ~\zwnj~                |
+  | \zwj        | ~\zwj~                 |
+  | \lrm        | ~\lrm~                 |
+  | \rlm        | ~\rlm~                 |
+  | \ndash      | ~\ndash~               |
+  | \mdash      | ~\mdash~               |
+  | \lsquo      | ~\lsquo~               |
+  | \rsquo      | ~\rsquo~               |
+  | \sbquo      | ~\sbquo~               |
+  | \ldquo      | ~\ldquo~               |
+  | \rdquo      | ~\rdquo~               |
+  | \bdquo      | ~\bdquo~               |
+  | \dagger     | ~\dagger~              |
+  | \Dagger     | ~\Dagger~              |
+  | \permil     | ~\permil~              |
+  | \lsaquo     | ~\lsaquo~              |
+  | \rsaquo     | ~\rsaquo~              |
+  | \euro       | ~\euro~                |
+  | \arccos     | ~\arccos~              |
+  | \arcsin     | ~\arcsin~              |
+  | \arctan     | ~\arctan~              |
+  | \arg        | ~\arg~                 |
+  | \cos        | ~\cos~                 |
+  | \cosh       | ~\cosh~                |
+  | \cot        | ~\cot~                 |
+  | \coth       | ~\coth~                |
+  | \csc        | ~\csc~                 |
+  | \deg        | ~\deg~                 |
+  | \det        | ~\det~                 |
+  | \dim        | ~\dim~                 |
+  | \exp        | ~\exp~                 |
+  | \gcd        | ~\gcd~                 |
+  | \hom        | ~\hom~                 |
+  | \inf        | ~\inf~                 |
+  | \ker        | ~\ker~                 |
+  | \lg         | ~\lg~                  |
+  | \lim        | ~\lim~                 |
+  | \liminf     | ~\liminf~              |
+  | \limsup     | ~\limsup~              |
+  | \ln         | ~\ln~                  |
+  | \log        | ~\log~                 |
+  | \max        | ~\max~                 |
+  | \min        | ~\min~                 |
+  | \Pr         | ~\Pr~                  |
+  | \sec        | ~\sec~                 |
+  | \sin        | ~\sin~                 |
+  | \sinh       | ~\sinh~                |
+  | \tan        | ~\tan~                 |
+  | \tanh       | ~\tanh~                |
 
 
 * Further reading
