--- a/READ.org
+++ b/READ.org
@@ -18,6 +18,11 @@
   + [[https://ogbe.net/res/main.css][ogbe' blog style]] - 链接指向 [[https://ogbe.net][ogbe]] 的博客所使用的样式文件(代码样式[[https://ogbe.net/res/code.css][code.css]]) [[[https://creativecommons.org/licenses/by-sa/4.0/][CC BY-SA 4.0]]]
   + [[https://github.com/guidao/guidao.github.io/blob/master/css/org-css.css][guidao's blog style]] - 链接指向 [[https://guidao.github.io/index.html][guidao]] 的博客所使用的样式文件
   + [[https://nicolas.petton.fr/css/site.css?v=2][Nicolas Petton' blog style]] 链接指向 [[https://nicolas.petton.fr/][Nicolas Petton]] 的博客所使用的样式文件
+    
+* 主题样例
+  样例采用的 =org= 源码是 =org-mode= 官网的 [[https://orgmode.org/worg/org-tutorials/org-publish-html-tutorial.html][org-publish-html-tutorial]] 文档源码.
+  其中也包含了官网样式的样例.
+  链接: [[https://rgb-24bit.github.io/org-html-theme-list][主题样例]]
 
 * 相关
   为了方便自己的使用, 部分主题我 /clone/ 了一个备份放在这个仓库, 这个仓库的备份可能不是最新的, 
