--- a/READ.org
+++ b/READ.org
@@ -11,13 +11,17 @@
   + [[https://github.com/thi-ng/org-spec][org-spec]] - 简洁的主题 [[[https://opensource.org/licenses/MIT][MIT]]]
   + [[https://github.com/dodrio/iv][iv]] - 结构清晰的主题 [[[https://opensource.org/licenses/GPL-3.0][GPL-3.0]]]
   + [[https://github.com/ptpt/org-notes-style][org-notes-style]] - 简介美观的主题
+  + [[https://github.com/thomasf/solarized-css][solarized-css]] - solarized 明暗两种 [[[https://opensource.org/licenses/MIT][MIT]]]
+  + 
 
-* Blog 
+* Blog & Article 
   来自 =Blog= 的样式
   + [[http://bastibe.de/static/style.css][bastibe's blog style]] - 链接指向 [[https://github.com/bastibe][bastibe]] 的博客所使用的样式文件 [[[https://github.com/bastibe/org-static-blog#license][LICENSE]]]
   + [[https://ogbe.net/res/main.css][ogbe' blog style]] - 链接指向 [[https://ogbe.net][ogbe]] 的博客所使用的样式文件(代码样式[[https://ogbe.net/res/code.css][code.css]]) [[[https://creativecommons.org/licenses/by-sa/4.0/][CC BY-SA 4.0]]]
   + [[https://github.com/guidao/guidao.github.io/blob/master/css/org-css.css][guidao's blog style]] - 链接指向 [[https://guidao.github.io/index.html][guidao]] 的博客所使用的样式文件
-  + [[https://nicolas.petton.fr/css/site.css?v=2][Nicolas Petton' blog style]] 链接指向 [[https://nicolas.petton.fr/][Nicolas Petton]] 的博客所使用的样式文件
+  + [[https://nicolas.petton.fr/css/site.css?v=2][Nicolas Petton' blog style]] - 链接指向 [[https://nicolas.petton.fr/][Nicolas Petton]] 的博客所使用的样式文件
+  + [[http://cse3521.artifice.cc/css/worg.css][Joshua Eckroth's article style]] - 链接指向 [[http://cse3521.artifice.cc/index.html][Joshua Ecirc]] 的文章所使用的的样式文件 [[[https://creativecommons.org/licenses/by-sa/3.0/][CC BY-SA 3.0]]]
+  + [[http://doc.norang.ca/org.css][Norang's article style]] - 链接指向 [[http://doc.norang.ca/][Norang]] 的文章所使用的的样式文件
     
 * 主题样例
   样例采用的 =org= 源码是 =org-mode= 官网的 [[https://orgmode.org/worg/org-tutorials/org-publish-html-tutorial.html][org-publish-html-tutorial]] 文档源码.
