添加新的样式 org-virgo

--- a/README.org
+++ b/README.org
@@ -21,6 +21,7 @@
   + [[https://rgb-24bit.github.io/org-html-theme-list/org-guidao/example.html][org-guidao]] - 来自 [[https://github.com/guidao][guidao]] 的 [[http://guidao.github.io/][个人网站]] 的样式
   + [[https://rgb-24bit.github.io/org-html-theme-list/org-joshua/example.html][org-joshua]] - 来自 [[http://cse3521.artifice.cc/index.html][Joshua Ecirc]] 的网站的样式
   + [[https://rgb-24bit.github.io/org-html-theme-list/org-norang/example.html][org-norang]] - 来自 [[http://doc.norang.ca/][Norang]] 的网站的样式
+  + [[https://rgb-24bit.github.io/org-html-theme-list/org-virgo/example.html][org-virgo]] - 来自 [[https://www.rosecoder.com/][Virgo]] 的网站的样式
 
 * Other
   + [[http://lifegoo.pluskid.org/wiki/css/style.css][星黎殿]] - 链接指向 [[http://lifegoo.pluskid.org/wiki/index.html][星黎殿]] 使用的样式文件
